feat: adiciona migrations e seeders para veiculo, vaga e operador

--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "scripts": {
+    "start": "node index.js --watch",
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
+    "db:migrate:undo:all": "sequelize db:migrate:undo:all",
+    "db:seed": "sequelize db:seed:all",
+    "db:seed:undo": "sequelize db:seed:undo:all",
+    "db:reset": "npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed",
+    "db:fresh": "npm run db:migrate:undo:all && npm run db:migrate",
+    "db:status": "sequelize db:migrate:status"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -8,5 +19,8 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
   }
 }
