--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
+# Configurações do Banco de Dados
+DB_USER=seu_usuario_postgres
 DB_HOST=localhost
+DB_DATABASE=seu_nome_banco
+DB_PASSWORD=sua_senha_super_segura
 DB_PORT=5432
-DB_NAME=estacionamento
-DB_USER=postgres
-DB_PASSWORD=sua_senha
-JWT_SECRET=umsegredoseguro
+
+# Para ambiente de teste (opcional)
+DB_DATABASE_TEST=seu_nome_banco_test
+
+# Outras configurações do projeto
+PORTA=3001
+NODE_ENV=development
+TEMPO_ACESS_TOKEN="2m"
+TEMPO_REFRESH_TOKEN="24h"
+SECRET_KEY=sua_chave_secreta_muito_complexa_aqui
+JWT_REFRESH_SECRET=sua_chave_refresh_muito_complexa_aqui
